update red color.

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
-      <p><li> 04/2024, an <span style="color:FireBrick">invited talk</span> will be given at <a style="color: #447ec9" href="https://cd2024.piers.org/session.html?sid=S137">PIERS2024</a>.</li></p>
-      <p><li> 01/2024, a <span style="color:FireBrick">cover paper</span> was published on <a style="color: #447ec9" href="https://doi.org/10.1038/s41377-023-01340-x">Light: Science and Applications</a>.</li></p>
+      <p><li> 04/2024, an <strong><span style="color:FireBrick">invited talk</span></strong> will be given at <a style="color: #447ec9" href="https://cd2024.piers.org/session.html?sid=S137">PIERS2024</a>.</li></p>
+      <p><li> 01/2024, a <strong><span style="color:FireBrick">cover paper</span></strong> was published on <a style="color: #447ec9" href="https://doi.org/10.1038/s41377-023-01340-x">Light: Science and Applications</a>.</li></p>
       <p><li> 03/2023, continue working in Hong Kong at <a style="color: #447ec9" href="https://isl.eee.hku.hk/">ISL@HKU</a>.</li></p>
       <p><li> 07/2022, became Dr. Wang and started career at <a style="color: #447ec9" href="https://www.lambcuhk.org/">LAMB@CUHK</a>.</li></p>
 
@@ -143,7 +143,7 @@
         <br>
         <a href="https://kqwang.github.io/">K. Wang</a>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
-        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://doi.org/10.1038/s41377-023-01340-x">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">code</a> |  <span style="color:FireBrick">cover paper</span>
+        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://doi.org/10.1038/s41377-023-01340-x">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">code</a> |  <strong><span style="color:FireBrick">cover paper</span></strong>
         <br>
         News: <a style="color: #447ec9" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #447ec9" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #447ec9" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/CJfAQ7DsBHWGcJE36V2uxQ">中国光学</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/SCPb9moq5thO8u6YH02lZQ">LightScienceApplications</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/WDpECC6F3Im74wV6PaEcUg">CSOE计算成像CITA</a>
         </p>
@@ -161,7 +161,7 @@
         <br>
         <a href="https://kqwang.github.io/">K. Wang</a>, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://doi.org/10.1117/1.APN.1.1.014001">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <span style="color:FireBrick">first article of this journal</span>
+        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://doi.org/10.1117/1.APN.1.1.014001">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <strong><span style="color:FireBrick">first article of this journal</span></strong>
         </p>
 
         <p>
@@ -258,7 +258,7 @@
         <br>
         <a href="https://kqwang.github.io/">K. Wang</a>, J. Dou, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics Letters</em> 2019 | <a style="color: #447ec9" href="https://doi.org/10.1364/OL.44.004765">paper</a> | <span style="color:FireBrick">Editors' Pick </span>
+        <em>Optics Letters</em> 2019 | <a style="color: #447ec9" href="https://doi.org/10.1364/OL.44.004765">paper</a> | <strong><span style="color:FireBrick">editors' pick </span></strong>
         </p>
 
         <p>
@@ -266,7 +266,7 @@
         <br>
         <a href="https://kqwang.github.io/">K. Wang</a>, Y. Li, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="https://doi.org/10.1364/OE.27.015100">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:FireBrick">ESI Highly Cited Paper </span>
+        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="https://doi.org/10.1364/OE.27.015100">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <strong><span style="color:FireBrick">ESI highly cited paper </span></strong>
         </p>
 
         <p>
