--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <br>
         <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://doi.org/10.1038/s41377-023-01340-x">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">code</a> |  <strong><span style="color:FireBrick">cover paper</span></strong>
         <br>
-        News: <a style="color: #447ec9" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #447ec9" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #447ec9" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/CJfAQ7DsBHWGcJE36V2uxQ">中国光学</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/SCPb9moq5thO8u6YH02lZQ">LightScienceApplications</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/WDpECC6F3Im74wV6PaEcUg">CSOE计算成像CITA</a>
+        <strong>News:</strong>strong> <a style="color: #447ec9" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #447ec9" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #447ec9" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/CJfAQ7DsBHWGcJE36V2uxQ">中国光学</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/SCPb9moq5thO8u6YH02lZQ">LightScienceApplications</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/WDpECC6F3Im74wV6PaEcUg">CSOE计算成像CITA</a>
         </p>
 
         <p>
