--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
           He received his PhD at Northwestern Polytechnical University under the supervision of <a href="https://scholar.google.com/citations?user=i0cHhBQAAAAJ">Prof. Jianlin Zhao</a>, <a href="https://teacher.gdut.edu.cn/jiangleidi">Prof. Jianglei Di</a>, and <a href="https://www3.ntu.edu.sg/home/mkmqian/">Prof. Kemao Qian</a>.
           <br><br>He is an enthusiast for <strong>computational imaging</strong> and <strong>deep learning</strong>.
         </p>
-
+<!--#4682B4-->
         <p class="w3-center">
-          <a style="color: #447ec9" href="mailto:kqwang.optics@gmail.com">Email</a> |
-          <a style="color: #447ec9" href="https://github.com/kqwang">Github</a> |
-          <a style="color: #447ec9" href="https://scholar.google.com/citations?user=K_TBJDUAAAAJ&hl">Google Scholar</a> |
-          <a style="color: #447ec9" href="https://www.researchgate.net/profile/Kaiqiang-Wang-5">ResearchGate</a>
+          <a style="color: #4682B4" href="mailto:kqwang.optics@gmail.com">Email</a> |
+          <a style="color: #4682B4" href="https://github.com/kqwang">Github</a> |
+          <a style="color: #4682B4" href="https://scholar.google.com/citations?user=K_TBJDUAAAAJ&hl">Google Scholar</a> |
+          <a style="color: #4682B4" href="https://www.researchgate.net/profile/Kaiqiang-Wang-5">ResearchGate</a>
         </p>
         </tbody></table>
   </div>
@@ -119,10 +119,10 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
-      <p><li> 04/2024, an <strong><span style="color:FireBrick">invited talk</span></strong> will be given at <a style="color: #447ec9" href="https://cd2024.piers.org/session.html?sid=S137">PIERS2024</a>.</li></p>
-      <p><li> 01/2024, a <strong><span style="color:FireBrick">cover paper</span></strong> was published on <a style="color: #447ec9" href="https://doi.org/10.1038/s41377-023-01340-x">Light: Science and Applications</a>.</li></p>
-      <p><li> 03/2023, continue working in Hong Kong at <a style="color: #447ec9" href="https://isl.eee.hku.hk/">ISL@HKU</a>.</li></p>
-      <p><li> 07/2022, became Dr. Wang and started career at <a style="color: #447ec9" href="https://www.lambcuhk.org/">LAMB@CUHK</a>.</li></p>
+      <p><li> 04/2024, an <strong><span style="color:FireBrick">invited talk</span></strong> will be given at <a style="color: #4682B4" href="https://cd2024.piers.org/session.html?sid=S137">PIERS2024</a>.</li></p>
+      <p><li> 01/2024, a <strong><span style="color:FireBrick">cover paper</span></strong> was published on <a style="color: #4682B4" href="https://doi.org/10.1038/s41377-023-01340-x">Light: Science and Applications</a>.</li></p>
+      <p><li> 03/2023, continue working in Hong Kong at <a style="color: #4682B4" href="https://isl.eee.hku.hk/">ISL@HKU</a>.</li></p>
+      <p><li> 07/2022, became Dr. Wang and started career at <a style="color: #4682B4" href="https://www.lambcuhk.org/">LAMB@CUHK</a>.</li></p>
 
   </div>
 
@@ -143,9 +143,9 @@
         <br>
         <a href="https://kqwang.github.io/">K. Wang</a>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
-        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://doi.org/10.1038/s41377-023-01340-x">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">code</a> |  <strong><span style="color:FireBrick">cover paper</span></strong>
+        <em>Light: Science & Applications</em> 2024 | <a style="color: #4682B4" href="https://doi.org/10.1038/s41377-023-01340-x">paper</a> | <a style="color: #4682B4" href="https://github.com/kqwang/phase-recovery">code</a> |  <strong><span style="color:FireBrick">cover paper</span></strong>
         <br>
-        News: <a style="color: #447ec9" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #447ec9" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #447ec9" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/CJfAQ7DsBHWGcJE36V2uxQ">中国光学</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/SCPb9moq5thO8u6YH02lZQ">LightScienceApplications</a> | <a style="color: #447ec9" href="https://mp.weixin.qq.com/s/WDpECC6F3Im74wV6PaEcUg">CSOE计算成像CITA</a>
+        News: <a style="color: #4682B4" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #4682B4" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #4682B4" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/CJfAQ7DsBHWGcJE36V2uxQ">中国光学</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/SCPb9moq5thO8u6YH02lZQ">LightScienceApplications</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/WDpECC6F3Im74wV6PaEcUg">CSOE计算成像CITA</a>
         </p>
 
         <p>
@@ -153,7 +153,7 @@
         <br>
         H. Qiu, X. Liu, <a href="https://kqwang.github.io/">K. Wang</a>, J. Dou, J. Di, and Y. Qin
         <br>
-        <em>Frontiers in Physics</em> 2023 | <a style="color: #447ec9" href="https://doi.org/10.3389/fphy.2023.1190616">paper</a>
+        <em>Frontiers in Physics</em> 2023 | <a style="color: #4682B4" href="https://doi.org/10.3389/fphy.2023.1190616">paper</a>
         </p>
 
         <p>
@@ -161,7 +161,7 @@
         <br>
         <a href="https://kqwang.github.io/">K. Wang</a>, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://doi.org/10.1117/1.APN.1.1.014001">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <strong><span style="color:FireBrick">first article of this journal</span></strong>
+        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #4682B4" href="https://doi.org/10.1117/1.APN.1.1.014001">paper</a> | <a style="color: #4682B4" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #4682B4" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <strong><span style="color:FireBrick">first article of this journal</span></strong>
         </p>
 
         <p>
@@ -169,7 +169,7 @@
         <br>
         J. Dou, C. Ma, <a href="https://kqwang.github.io/">K. Wang</a>, J. Di, J. Zhang, and J. Zhao
         <br>
-        <em>Optics Letters</em> 2022 | <a style="color: #447ec9" href="https://doi.org/10.3389/fphy.2023.1190616">paper</a>
+        <em>Optics Letters</em> 2022 | <a style="color: #4682B4" href="https://doi.org/10.3389/fphy.2023.1190616">paper</a>
         </p>
 
         <p>
@@ -177,7 +177,7 @@
         <br>
         <a href="https://kqwang.github.io/">K. Wang</a>, M. Zhang, J. Tang, L. Wang, L. Hu, X. Wu, W. Li, J. Di, G. Liu, and J. Zhao
         <br>
-        <em>PhotoniX</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.1186/s43074-021-00030-4">paper</a>
+        <em>PhotoniX</em> 2021 | <a style="color: #4682B4" href="https://doi.org/10.1186/s43074-021-00030-4">paper</a>
         </p>
 
         <p>
@@ -185,7 +185,7 @@
         <br>
         J. Tang, J. Wu, <a href="https://kqwang.github.io/">K. Wang</a>, Z. Ren, X. Wu, L. Hu, J. Di, G. Liu, and J. Zhao
         <br>
-        <em>Optics and Lasers in Engineering</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.1016/j.optlaseng.2021.106707">paper</a>
+        <em>Optics and Lasers in Engineering</em> 2021 | <a style="color: #4682B4" href="https://doi.org/10.1016/j.optlaseng.2021.106707">paper</a>
         </p>
 
         <p>
@@ -193,7 +193,7 @@
         <br>
         J. Tang, <a href="https://kqwang.github.io/">K. Wang</a>, Z. Ren, W. Zhang, X. Wu, J. Di, G. Liu, and J. Zhao
         <br>
-        <em>Optics and Lasers in Engineering</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.1016/j.optlaseng.2020.106463">paper</a>
+        <em>Optics and Lasers in Engineering</em> 2021 | <a style="color: #4682B4" href="https://doi.org/10.1016/j.optlaseng.2020.106463">paper</a>
         </p>
 
         <p>
@@ -201,7 +201,7 @@
         <br>
         J. Di, J. Tang, J. Wu, <a href="https://kqwang.github.io/">K. Wang</a>, Z. Ren, M. Zhang, and J. Zhao
         <br>
-        <em>Laser & Optoelectronics Progress</em> 2021 | <a style="color: #447ec9" href="http://dx.doi.org/10.3788/LOP202158.1600001">paper</a>
+        <em>Laser & Optoelectronics Progress</em> 2021 | <a style="color: #4682B4" href="http://dx.doi.org/10.3788/LOP202158.1600001">paper</a>
         </p>
 
         <p>
@@ -209,7 +209,7 @@
         <br>
         J. Di, J. Wu, <a href="https://kqwang.github.io/">K. Wang</a>, J. Tang, Y. Li, and J. Zhao
         <br>
-        <em>Frontiers in Physics</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.3389/fphy.2021.651313">paper</a>
+        <em>Frontiers in Physics</em> 2021 | <a style="color: #4682B4" href="https://doi.org/10.3389/fphy.2021.651313">paper</a>
         </p>
 
         <p>
@@ -217,7 +217,7 @@
         <br>
         J. Di, W. Han, S. Liu, <a href="https://kqwang.github.io/">K. Wang</a>, J. Tang, and J. Zhao
         <br>
-        <em>Applied Optics</em> 2021 | <a style="color: #447ec9" href="https://doi.org/10.1364/AO.404276">paper</a>
+        <em>Applied Optics</em> 2021 | <a style="color: #4682B4" href="https://doi.org/10.1364/AO.404276">paper</a>
         </p>
 
         <p>
@@ -225,7 +225,7 @@
         <br>
         <a href="https://kqwang.github.io/">K. Wang</a>, Jianglei Di, Ying Li, Zhenbo Ren, Qian Kemao, Jianlin Zhao
         <br>
-        <em>Optics and Lasers in Engineering</em> 2020 | <a style="color: #447ec9" href="https://doi.org/10.1016/j.optlaseng.2020.106233">paper</a>
+        <em>Optics and Lasers in Engineering</em> 2020 | <a style="color: #4682B4" href="https://doi.org/10.1016/j.optlaseng.2020.106233">paper</a>
         </p>
 
         <p>
@@ -233,7 +233,7 @@
         <br>
         <a href="https://kqwang.github.io/">K. Wang</a>, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics Letters</em> 2020 | <a style="color: #447ec9" href="https://doi.org/10.1364/OL.395445">paper</a>
+        <em>Optics Letters</em> 2020 | <a style="color: #4682B4" href="https://doi.org/10.1364/OL.395445">paper</a>
         </p>
 
 
@@ -242,7 +242,7 @@
         <br>
         J. Tang, <a href="https://kqwang.github.io/">K. Wang</a>, W. Zhang, X. Wu, G. Liu, J. Di, and J. Zhao
         <br>
-        <em>Acta Optica Sinica</em> 2020 | <a style="color: #447ec9" href="http://dx.doi.org/10.3788/AOS202040.2111001">paper</a>
+        <em>Acta Optica Sinica</em> 2020 | <a style="color: #4682B4" href="http://dx.doi.org/10.3788/AOS202040.2111001">paper</a>
         </p>
 
         <p>
@@ -250,7 +250,7 @@
         <br>
         Y. Li, J. Di, <a href="https://kqwang.github.io/">K. Wang</a>, S. Wang, and J. Zhao
         <br>
-        <em>Optics Express</em> 2020 | <a style="color: #447ec9" href="https://doi.org/10.1364/OE.397029">paper</a>
+        <em>Optics Express</em> 2020 | <a style="color: #4682B4" href="https://doi.org/10.1364/OE.397029">paper</a>
         </p>
 
         <p>
@@ -258,7 +258,7 @@
         <br>
         <a href="https://kqwang.github.io/">K. Wang</a>, J. Dou, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics Letters</em> 2019 | <a style="color: #447ec9" href="https://doi.org/10.1364/OL.44.004765">paper</a> | <strong><span style="color:FireBrick">editors' pick </span></strong>
+        <em>Optics Letters</em> 2019 | <a style="color: #4682B4" href="https://doi.org/10.1364/OL.44.004765">paper</a> | <strong><span style="color:FireBrick">editors' pick </span></strong>
         </p>
 
         <p>
@@ -266,7 +266,7 @@
         <br>
         <a href="https://kqwang.github.io/">K. Wang</a>, Y. Li, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="https://doi.org/10.1364/OE.27.015100">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <strong><span style="color:FireBrick">ESI highly cited paper </span></strong>
+        <em>Optics express</em> 2019 | <a style="color: #4682B4" href="https://doi.org/10.1364/OE.27.015100">paper</a> | <a style="color: #4682B4" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <strong><span style="color:FireBrick">ESI highly cited paper </span></strong>
         </p>
 
         <p>
@@ -274,7 +274,7 @@
         <br>
         Y. Li, J. Di, C. Ma, J. Zhang, J. Zhong, <a href="https://kqwang.github.io/">K. Wang</a>, T. Xi, and J. Zhao
         <br>
-        <em>Optics Express</em> 2018 | <a style="color: #447ec9" href="https://doi.org/10.1364/OE.26.000586">paper</a>
+        <em>Optics Express</em> 2018 | <a style="color: #4682B4" href="https://doi.org/10.1364/OE.26.000586">paper</a>
         </p>
 
         <p>
@@ -282,7 +282,7 @@
         <br>
         J. Di, <a href="https://kqwang.github.io/">K. Wang</a>, J. Zhang, C. Ma, T. Xi, Y. Li, K. Wei, W. Qu, and J. Zhao
         <br>
-        <em>Optical Engineering</em> 2018 | <a style="color: #447ec9" href="https://doi.org/10.1117/1.OE.57.2.024108">paper</a>
+        <em>Optical Engineering</em> 2018 | <a style="color: #4682B4" href="https://doi.org/10.1117/1.OE.57.2.024108">paper</a>
         </p>
 
         <p>
@@ -290,7 +290,7 @@
         <br>
         J. Di, Y. Li, <a href="https://kqwang.github.io/">K. Wang</a>, and J. Zhao
         <br>
-        <em>IEEE Photonics Journal</em> 2018 | <a style="color: #447ec9" href="https://doi.org/10.1109/JPHOT.2018.2839878">paper</a>
+        <em>IEEE Photonics Journal</em> 2018 | <a style="color: #4682B4" href="https://doi.org/10.1109/JPHOT.2018.2839878">paper</a>
         </p>
 
         <p>
@@ -298,7 +298,7 @@
         <br>
         J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, <a href="https://kqwang.github.io/">K. Wang</a>, and J. Zhao
         <br>
-        <em>Optical Engineering</em> 2017 | <a style="color: #447ec9" href="https://doi.org/10.1117/1.OE.56.11.111712">paper</a>
+        <em>Optical Engineering</em> 2017 | <a style="color: #4682B4" href="https://doi.org/10.1117/1.OE.56.11.111712">paper</a>
         </p>
 
       </ol>
@@ -310,7 +310,7 @@
         <br>
         J. Tang, <a href="https://kqwang.github.io/">K. Wang</a>, X. Wu, J. Di, G. Liu, and J. Zhao
         <br>
-        in Optics Frontier Online 2020: Optics Imaging and Display (SPIE, 2020), 11571, pp. 19–25. | <a style="color: #447ec9" href="https://doi.org/10.1117/12.2576299">paper</a>
+        in Optics Frontier Online 2020: Optics Imaging and Display (SPIE, 2020), 11571, pp. 19–25. | <a style="color: #4682B4" href="https://doi.org/10.1117/12.2576299">paper</a>
         </p>
 
         <p>
@@ -318,7 +318,7 @@
         <br>
         J. Di, <a href="https://kqwang.github.io/">K. Wang</a>, and J. Zhao
         <br>
-        in Holography, Diffractive Optics, and Applications X (SPIE, 2020), 11551, p. 1155107. | <a style="color: #447ec9" href="https://doi.org/10.1117/12.2573707">paper</a>
+        in Holography, Diffractive Optics, and Applications X (SPIE, 2020), 11551, p. 1155107. | <a style="color: #4682B4" href="https://doi.org/10.1117/12.2573707">paper</a>
         </p>
 
         <p>
@@ -326,7 +326,7 @@
         <br>
         J. Di, <a href="https://kqwang.github.io/">K. Wang</a>, Y. Li, and J. Zhao
         <br>
-        in Digital Holography and Three-Dimensional Imaging (Optica Publishing Group, 2020), pp. HTu4B-2. | <a style="color: #447ec9" href="https://doi.org/10.1364/DH.2020.HTu4B.2">paper</a>
+        in Digital Holography and Three-Dimensional Imaging (Optica Publishing Group, 2020), pp. HTu4B-2. | <a style="color: #4682B4" href="https://doi.org/10.1364/DH.2020.HTu4B.2">paper</a>
         </p>
 
         <p>
@@ -334,7 +334,7 @@
         <br>
         J. Di, J. Zhang, Y. Song, <a href="https://kqwang.github.io/">K. Wang</a>, K. Wei, and J. Zhao
         <br>
-        in Quantitative Phase Imaging IV (SPIE, 2018), 10503, pp. 208–211. | <a style="color: #447ec9" href="https://doi.org/10.1117/12.2289324">paper</a>
+        in Quantitative Phase Imaging IV (SPIE, 2018), 10503, pp. 208–211. | <a style="color: #4682B4" href="https://doi.org/10.1117/12.2289324">paper</a>
         </p>
 
         <p>
@@ -342,7 +342,7 @@
         <br>
         J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, <a href="https://kqwang.github.io/">K. Wang</a>, and J. Zhao
         <br>
-        in Fifth International Conference on Optical and Photonics Engineering (SPIE, 2017), 10449, pp. 349–354. | <a style="color: #447ec9" href="https://doi.org/10.1117/12.2270774">paper</a>
+        in Fifth International Conference on Optical and Photonics Engineering (SPIE, 2017), 10449, pp. 349–354. | <a style="color: #4682B4" href="https://doi.org/10.1117/12.2270774">paper</a>
         </p>
 
       </ol>
@@ -408,11 +408,11 @@ of America A, Optics Continuum.
       <p>
         <ol>
           <p>
-          <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">Resource for phase recovery</a>.
+          <a style="color: #4682B4" href="https://github.com/kqwang/phase-recovery">Resource for phase recovery</a>.
           </p>
 
           <p>
-          <a style="color: #447ec9" href="https://github.com/kqwang/computational-imaging">Resource for computational imaging</a>.
+          <a style="color: #4682B4" href="https://github.com/kqwang/computational-imaging">Resource for computational imaging</a>.
           </p>
 
         </ol>
