--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         </p>
 
         <p>
-        <li>Deep learning in computational imaging>
+        <li>Deep learning in computational imaging
         <br>
         J. Di, <a href="https://kqwang.github.io/">K. Wang</a>, and J. Zhao
         <br>
