--- a/index.html
+++ b/index.html
@@ -3,13 +3,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <head>
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-TQQ5QCZN');</script>
-  <!-- End Google Tag Manager -->
 
   <title>Kaiqiang</title>
 
@@ -58,11 +51,6 @@
 
 
 <body class="w3-content" style="max-width:888px">
-
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQQ5QCZN"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
@@ -432,23 +420,23 @@ of America A, Optics Continuum.
       </li>
   </div>
 
-<!--&lt;!&ndash; Default Statcounter code for https://kqwang.github.io/-->
-<!--https://kqwang.github.io/ &ndash;&gt;-->
-<!--<script type="text/javascript">-->
-<!--var sc_project=12887075;-->
-<!--var sc_invisible=1;-->
-<!--var sc_security="6599b468";-->
-<!--</script>-->
-<!--<script type="text/javascript"-->
-<!--src="https://www.statcounter.com/counter/counter.js"-->
-<!--async></script>-->
-<!--<noscript><div class="statcounter"><a title="Web Analytics-->
-<!--Made Easy - Statcounter" href="https://statcounter.com/"-->
-<!--target="_blank"><img class="statcounter"-->
-<!--src="https://c.statcounter.com/12887075/0/6599b468/1/"-->
-<!--alt="Web Analytics Made Easy - Statcounter"-->
-<!--referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>-->
-<!--&lt;!&ndash; End of Statcounter Code &ndash;&gt;-->
+<!-- Default Statcounter code for https://kqwang.github.io/
+https://kqwang.github.io/ -->
+<script type="text/javascript">
+var sc_project=12887075;
+var sc_invisible=1;
+var sc_security="6599b468";
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics
+Made Easy - Statcounter" href="https://statcounter.com/"
+target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12887075/0/6599b468/1/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 
 <!-- End page content -->
 
