--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 
 <head>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LTSEJNJV2B"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LTSEJNJV2B');
+  </script>
+
   <title>Kaiqiang</title>
 
   <meta charset="UTF-8">
