--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           He received his PhD at Northwestern Polytechnical University under the supervision of <a href="https://scholar.google.com/citations?user=i0cHhBQAAAAJ">Prof. Jianlin Zhao</a>, <a href="https://teacher.gdut.edu.cn/jiangleidi">Prof. Jianglei Di</a>, and <a href="https://www3.ntu.edu.sg/home/mkmqian/">Prof. Kemao Qian</a>.
           <br><br>He is an enthusiast for <strong>computational imaging</strong> and <strong>deep learning</strong>.
         </p>
-<!--#4682B4-->
+
         <p class="w3-center">
           <a style="color: #4682B4" href="mailto:kqwang.optics@gmail.com">Email</a> |
           <a style="color: #4682B4" href="https://github.com/kqwang">Github</a> |
@@ -156,6 +156,9 @@
         <em>Light: Science & Applications</em> 2024 | <a style="color: #4682B4" href="https://doi.org/10.1038/s41377-023-01340-x">paper</a> | <a style="color: #4682B4" href="https://github.com/kqwang/phase-recovery">code</a> |  <strong><span style="color:FireBrick">cover paper</span></strong>
         <br>
         <strong>News:</strong> <a style="color: #4682B4" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #4682B4" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #4682B4" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/CJfAQ7DsBHWGcJE36V2uxQ">中国光学</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/SCPb9moq5thO8u6YH02lZQ">LightScienceApplications</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/WDpECC6F3Im74wV6PaEcUg">CSOE计算成像CITA</a>
+        <br>
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
+        <strong>Abstract:</strong> Phase recovery (PR) refers to calculating the phase of the light field from its intensity measurements. As exemplified from quantitative phase imaging and coherent diffraction imaging to adaptive optics, PR is essential for reconstructing the refractive index distribution or topography of an object and correcting the aberration of an imaging system. In recent years, deep learning (DL), often implemented through deep neural networks, has provided unprecedented support for computational imaging, leading to more efficient solutions for various PR problems. In this review, we first briefly introduce conventional methods for PR. Then, we review how DL provides support for PR from the following three stages, namely, pre-processing, in-processing, and post-processing. We also review how DL is used in phase image processing. Finally, we summarize the work in DL for PR and provide an outlook on how to better use DL to improve the reliability and efficiency of PR. Furthermore, we present a live-updating resource (<a style="color: #4682B4" href="https://github.com/kqwang/phase-recovery">https://github.com/kqwang/phase-recovery</a>) for readers to learn more about PR.</div>
         </p>
 
         <p>
@@ -172,6 +175,9 @@
         <a href="https://kqwang.github.io/">K. Wang</a>, Q. Kemao, J. Di, and J. Zhao
         <br>
         <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #4682B4" href="https://doi.org/10.1117/1.APN.1.1.014001">paper</a> | <a style="color: #4682B4" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #4682B4" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <strong><span style="color:FireBrick">first article of this journal</span></strong>
+        <br>
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
+        <strong>Abstract:</strong> Phase unwrapping is an indispensable step for many optical imaging and metrology techniques. The rapid development of deep learning has brought ideas to phase unwrapping. In the past four years, various phase dataset generation methods and deep-learning-involved spatial phase unwrapping methods have emerged quickly. However, these methods were proposed and analyzed individually, using different strategies, neural networks, and datasets, and applied to different scenarios. It is thus necessary to do a detailed comparison of these deep-learning-involved methods and the traditional methods in the same context. We first divide the phase dataset generation methods into random matrix enlargement, Gauss matrix superposition, and Zernike polynomials superposition, and then divide the deep-learning-involved phase unwrapping methods into deep-learning-performed regression, deep-learning-performed wrap count, and deep-learning-assisted denoising. For the phase dataset generation methods, the richness of the datasets and the generalization capabilities of the trained networks are compared in detail. In addition, the deep-learning-involved methods are analyzed and compared with the traditional methods in ideal, noisy, discontinuous, and aliasing cases. Finally, we give suggestions on the best methods for different situations and propose the potential development direction for the dataset generation method, neural network structure, generalization ability enhancement, and neural network training strategy for the deep-learning-involved spatial phase unwrapping methods.</div>
         </p>
 
         <p>
@@ -188,6 +194,9 @@
         <a href="https://kqwang.github.io/">K. Wang</a>, M. Zhang, J. Tang, L. Wang, L. Hu, X. Wu, W. Li, J. Di, G. Liu, and J. Zhao
         <br>
         <em>PhotoniX</em> 2021 | <a style="color: #4682B4" href="https://doi.org/10.1186/s43074-021-00030-4">paper</a>
+        <br>
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
+        <strong>Abstract:</strong> Deep learning neural networks are used for wavefront sensing and aberration correction in atmospheric turbulence without any wavefront sensor (i.e. reconstruction of the wavefront aberration phase from the distorted image of the object). We compared and found the characteristics of the direct and indirect reconstruction ways:(i) directly reconstructing the aberration phase; (ii) reconstructing the Zernike coefficients and then calculating the aberration phase. We verified the generalization ability and performance of the network for a single object and multiple objects. What's more, we verified the correction effect for a turbulence pool and the feasibility for a real atmospheric turbulence environment.</div>
         </p>
 
         <p>
@@ -236,6 +245,9 @@
         <a href="https://kqwang.github.io/">K. Wang</a>, Jianglei Di, Ying Li, Zhenbo Ren, Qian Kemao, Jianlin Zhao
         <br>
         <em>Optics and Lasers in Engineering</em> 2020 | <a style="color: #4682B4" href="https://doi.org/10.1016/j.optlaseng.2020.106233">paper</a>
+        <br>
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
+        <strong>Abstract:</strong> The transport of intensity equation (TIE) is an ideal candidate for phase imaging with partially coherent illuminations. TIE has the advantages of simplicity in phase calculation due to its closed-form solution and no requirement for a reference beam and phase unwrapping due to its non-interferometric nature. However, TIE requires multiple through-focus intensity images, and is very sensitive to image boundaries and noise. Thus, in this paper, we combine deep learning with TIE, abbreviated as dTIE. After being trained by TIE phase results, the dTIE retains the advantages of TIE, and overcomes the shortcomings of TIE as follows: (i) only one de-focus intensity image is required for phase imaging while the result is very close to the TIE result with SSIM index reaches 0.95, enabling more efficient phase imaging; (ii) the boundary problem automatically disappears due to the translation invariance of the convolutional networks; (iii) it is insensitive to noise even with very heavy noise. All these enhancements are verified in the application of dTIE for phase imaging of real cells.</div>
         </p>
 
         <p>
@@ -244,6 +256,9 @@
         <a href="https://kqwang.github.io/">K. Wang</a>, Q. Kemao, J. Di, and J. Zhao
         <br>
         <em>Optics Letters</em> 2020 | <a style="color: #4682B4" href="https://doi.org/10.1364/OL.395445">paper</a>
+        <br>
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
+        <strong>Abstract:</strong> In this Letter, a deep learning solution (Y4-Net, four output channels network) to one-shot dual-wavelength digital holography is proposed to simultaneously reconstruct the complex amplitude information of both wavelengths from a single digital hologram with high efficiency. In the meantime, by using single-wavelength results as network ground truth to train the Y4-Net, the challenging spectral overlapping problem in common-path situations is solved with high accuracy.</div>
         </p>
 
 
@@ -269,6 +284,9 @@
         <a href="https://kqwang.github.io/">K. Wang</a>, J. Dou, Q. Kemao, J. Di, and J. Zhao
         <br>
         <em>Optics Letters</em> 2019 | <a style="color: #4682B4" href="https://doi.org/10.1364/OL.44.004765">paper</a> | <strong><span style="color:FireBrick">editors' pick </span></strong>
+        <br>
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
+        <strong>Abstract:</strong> In this Letter, for the first time, to the best of our knowledge, we propose a digital holographic reconstruction method with a one-to-two deep learning framework (Y-Net). Perfectly fitting the holographic reconstruction process, the Y-Net can simultaneously reconstruct intensity and phase information from a single digital hologram. As a result, this compact network with reduced parameters brings higher performance than typical network variants. The experimental results of the mouse phagocytes demonstrate the advantages of the proposed Y-Net.</div>
         </p>
 
         <p>
@@ -277,6 +295,9 @@
         <a href="https://kqwang.github.io/">K. Wang</a>, Y. Li, Q. Kemao, J. Di, and J. Zhao
         <br>
         <em>Optics express</em> 2019 | <a style="color: #4682B4" href="https://doi.org/10.1364/OE.27.015100">paper</a> | <a style="color: #4682B4" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <strong><span style="color:FireBrick">ESI highly cited paper </span></strong>
+        <br>
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
+        <strong>Abstract:</strong> Phase unwrapping is an important but challenging issue in phase measurement. Even with the research efforts of a few decades, unfortunately, the problem remains not well solved, especially when heavy noise and aliasing (undersampling) are present. We propose a database generation method for phase-type objects and a one-step deep learning phase unwrapping method. With a trained deep neural network, the unseen phase fields of living mouse osteoblasts and dynamic candle flame are successfully unwrapped, demonstrating that the complicated nonlinear phase unwrapping task can be directly fulfilled in one step by a single deep neural network. Excellent anti-noise and anti-aliasing performances outperforming classical methods are highlighted in this paper.</div>
         </p>
 
         <p>
