--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <!--      <img style="width: 80%;max-width: 80px" alt="profile photo" src="images/kaiqiang.png">-->
 <!--      <h1>Kaiqiang Wang</h1>-->
 <!--        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">-->
-          <a href="https://kqwang.github.io/">Kaiqiang Wang</a> is now a postdoctoral fellow in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong.
+          <a href="https://kqwang.github.io/">Kaiqiang Wang</a> (王凯强) is now a postdoctoral fellow in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong.
           Before that, he did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/people/pi">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong.
           He received his PhD at Northwestern Polytechnical University under the supervision of <a href="https://scholar.google.com/citations?user=i0cHhBQAAAAJ">Prof. Jianlin Zhao</a>, <a href="https://teacher.gdut.edu.cn/jiangleidi">Prof. Jianglei Di</a>, and <a href="https://www3.ntu.edu.sg/home/mkmqian/">Prof. Kemao Qian</a>.
           <br><br>He is an enthusiast for <strong>computational imaging</strong> and <strong>deep learning</strong>.
@@ -121,7 +121,8 @@
           <a style="color: #4682B4" href="mailto:kqwang.optics@gmail.com">Email</a> |
           <a style="color: #4682B4" href="https://github.com/kqwang">Github</a> |
           <a style="color: #4682B4" href="https://scholar.google.com/citations?user=K_TBJDUAAAAJ&hl">Google Scholar</a> |
-          <a style="color: #4682B4" href="https://www.researchgate.net/profile/Kaiqiang-Wang-5">ResearchGate</a>
+          <a style="color: #4682B4" href="https://www.researchgate.net/profile/Kaiqiang-Wang-5">ResearchGate</a> |
+          <a style="color: #4682B4" href="https://www.zhihu.com/people/AI.imaging">ZhiHu(知乎)</a>
         </p>
         </tbody></table>
   </div>
