add cover image

--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@
         <br>
         <div style="height:150px;overflow-y:auto" class="w3-light-grey">
         <strong>Abstract:</strong> Phase recovery (PR) refers to calculating the phase of the light field from its intensity measurements. As exemplified from quantitative phase imaging and coherent diffraction imaging to adaptive optics, PR is essential for reconstructing the refractive index distribution or topography of an object and correcting the aberration of an imaging system. In recent years, deep learning (DL), often implemented through deep neural networks, has provided unprecedented support for computational imaging, leading to more efficient solutions for various PR problems. In this review, we first briefly introduce conventional methods for PR. Then, we review how DL provides support for PR from the following three stages, namely, pre-processing, in-processing, and post-processing. We also review how DL is used in phase image processing. Finally, we summarize the work in DL for PR and provide an outlook on how to better use DL to improve the reliability and efficiency of PR. Furthermore, we present a live-updating resource (<a style="color: #4682B4" href="https://github.com/kqwang/phase-recovery">https://github.com/kqwang/phase-recovery</a>) for readers to learn more about PR.</div>
-        </p>
-
+        <br>
+        <a href="https://www.nature.com/lsa/editorshighlights/2024highlight" target="_blank">
+        <img src="images/Editor_highlight_2024-2.jpg" alt="在新窗口中打开示例网站" style="max-width: 50%; height: auto;">
+        </a>
         <p>
         <li>Real-time phase measurement of optical vortex via digital holography
         <br>
