--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+<div class="w3-overlay  w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:150px">
 
   <!-- Push down content on small screens -->
-  <div class="w3-hide-large" style="margin-top:80px"></div>
+  <div class="w3-hide-large w3-black " style="margin-top:80px"></div>
 
 <!-- The Biography Section -->
     <div class="w3-container w3-text-light-grey w3-padding-32" id="biography">
