--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <p><li> 04/2024, an <strong><span style="color:FireBrick">invited talk</span></strong> is given at <a style="color: #4682B4" href="https://cd2024.piers.org/session.html?sid=S137">PIERS2024</a>.</li></p>
       <p><li> 01/2024, a <strong><span style="color:FireBrick">cover paper</span></strong> is published on <a style="color: #4682B4" href="https://doi.org/10.1038/s41377-023-01340-x">Light: Science and Applications</a>.</li></p>
       <p><li> 03/2023, continue working in Hong Kong at <a style="color: #4682B4" href="https://isl.eee.hku.hk/">ISL@HKU</a>.</li></p>
-      <p><li> 07/2022, become Dr. Wang and started career from <a style="color: #4682B4" href="https://www.lambcuhk.org/">LAMB@CUHK</a>.</li></p>
+      <p><li> 07/2022, become Dr. Wang and start career from <a style="color: #4682B4" href="https://www.lambcuhk.org/">LAMB@CUHK</a>.</li></p>
 
   </div>
 
