--- a/index.html
+++ b/index.html
@@ -154,7 +154,11 @@
         <br>
         <a href="https://kqwang.github.io/">K. Wang</a>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
-        <em>Light: Science & Applications</em> 2024 | <a style="color: #4682B4" href="https://doi.org/10.1038/s41377-023-01340-x">paper</a> | <a style="color: #4682B4" href="https://github.com/kqwang/phase-recovery">code</a> |  <strong><span style="color:FireBrick">cover paper and 2024 editors' highlight</span></strong>
+        <em>Light: Science & Applications</em> 2024 | <a style="color: #4682B4" href="https://doi.org/10.1038/s41377-023-01340-x">paper</a> | <a style="color: #4682B4" href="https://github.com/kqwang/phase-recovery">code</a>
+          <br>
+          <strong><span style="color:FireBrick">Cover Paper</span></strong>
+          <br>
+          <strong><span style="color:FireBrick">Editors' Highlight</span></strong>
         <br>
         <strong>News:</strong> <a style="color: #4682B4" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #4682B4" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #4682B4" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/CJfAQ7DsBHWGcJE36V2uxQ">中国光学</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/SCPb9moq5thO8u6YH02lZQ">LSA</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/WDpECC6F3Im74wV6PaEcUg">CSOE</a>
         <br>
