--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
           <a style="color: #4682B4" href="mailto:kqwang.optics@gmail.com">Email</a> |
           <a style="color: #4682B4" href="https://github.com/kqwang">Github</a> |
           <a style="color: #4682B4" href="https://scholar.google.com/citations?user=K_TBJDUAAAAJ&hl">Google Scholar</a> |
-          <a style="color: #4682B4" href="https://www.researchgate.net/profile/Kaiqiang-Wang-5">ResearchGate</a> |
-          <a style="color: #4682B4" href="https://www.zhihu.com/people/AI.imaging">ZhiHu(知乎)</a>
+          <a style="color: #4682B4" href="https://www.researchgate.net/profile/Kaiqiang-Wang-5">ResearchGate</a>
+<!--          <a style="color: #4682B4" href="https://www.zhihu.com/people/AI.imaging">ZhiHu(知乎)</a>-->
         </p>
         </tbody></table>
   </div>
@@ -159,6 +159,8 @@
           <strong><span style="color:FireBrick">Cover Paper</span></strong>
           <br>
           <strong><span style="color:FireBrick">Editors' Highlight</span></strong>
+          <br>
+          <strong><span style="color:FireBrick">ESI Highly Cited Paper </span></strong>
         <br>
         <strong>News:</strong> <a style="color: #4682B4" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #4682B4" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #4682B4" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/CJfAQ7DsBHWGcJE36V2uxQ">中国光学</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/SCPb9moq5thO8u6YH02lZQ">LSA</a> | <a style="color: #4682B4" href="https://mp.weixin.qq.com/s/WDpECC6F3Im74wV6PaEcUg">CSOE</a>
         <br>
