--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 <!--      <img style="width: 80%;max-width: 80px" alt="profile photo" src="images/kaiqiang.png">-->
 <!--      <h1>Kaiqiang Wang</h1>-->
 <!--        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">-->
-          <a href="https://kqwang.github.io/">Kaiqiang Wang</a> (王凯强) is now a postdoctoral fellow in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong.
-          Before that, he did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/people/pi">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong.
+          <a href="https://kqwang.github.io/">Kaiqiang Wang</a> (王凯强) is is now an associate professor at Northwestern Polytechnical University.
+          Before that, he did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/people/pi">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong and the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong.
           He received his PhD at Northwestern Polytechnical University under the supervision of <a href="https://scholar.google.com/citations?user=i0cHhBQAAAAJ">Prof. Jianlin Zhao</a>, <a href="https://teacher.gdut.edu.cn/jiangleidi">Prof. Jianglei Di</a>, and <a href="https://www3.ntu.edu.sg/home/mkmqian/">Prof. Kemao Qian</a>.
           <br><br>He is an enthusiast for <strong>computational imaging</strong> and <strong>deep learning</strong>.
         </p>
@@ -148,6 +148,16 @@
 
       <h4> Academic Journals:</h4>
       <ol>
+        <p>
+        <li><strong>Deep learning phase recovery: data-driven, physics-driven, or a combination of both?</strong>
+        <br>
+        <a href="https://kqwang.github.io/">K. Wang</a>, E. Lam
+        <br>
+        <em>Advanced Photonics Nexus</em> 2024 | <a style="color: #4682B4" href="https://doi.org/10.1117/1.APN.3.5.056006">paper</a> | <a style="color: #4682B4" href="https://github.com/kqwang/DLPR">code</a> 
+        <br>
+        <div style="height:150px;overflow-y:auto" class="w3-light-grey">
+        <strong>Abstract:</strong> Phase recovery, calculating the phase of a light wave from its intensity measurements, is essential for various applications, such as coherent diffraction imaging, adaptive optics, and biomedical imaging. It enables the reconstruction of an object’s refractive index distribution or topography as well as the correction of imaging system aberrations. In recent years, deep learning has been proven to be highly effective in addressing phase recovery problems. The two most direct deep learning phase recovery strategies are data-driven (DD) with supervised learning mode and physics-driven (PD) with self-supervised learning mode. DD and PD achieve the same goal in different ways yet there is a lack of necessary research to reveal similarities and differences. Therefore, we comprehensively compare these two deep learning phase recovery strategies in terms of time consumption, accuracy, generalization ability, ill-posedness adaptability, and prior capacity. What is more, we propose a co-driven strategy of combining datasets and physics for the balance of high- and low-frequency information.</div>
+        </p>
 
         <p>
         <li><strong>On the use of deep learning for phase recovery</strong>
