--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 <!--      <img style="width: 80%;max-width: 80px" alt="profile photo" src="images/kaiqiang.png">-->
 <!--      <h1>Kaiqiang Wang</h1>-->
 <!--        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">-->
-          <a href="https://teacher.nwpu.edu.cn/kqwang"><font size="6">中文主页</font></a>
-          <br><br>
-          <a href="https://teacher.nwpu.edu.cn/en/kqwang"><font size="6">English Homepage</font></a>
+<!--          <a href="https://teacher.nwpu.edu.cn/kqwang"><font size="6">中文主页</font></a>-->
+<!--          <br><br>-->
+<!--          <a href="https://teacher.nwpu.edu.cn/en/kqwang"><font size="6">English Homepage</font></a>-->
         </p>
 
 
@@ -89,7 +89,7 @@
 
 
 <script>
-// Accordion 
+// Accordion
 function myAccFunc() {
   var x = document.getElementById("demoAcc");
   if (x.className.indexOf("w3-show") == -1) {
@@ -108,12 +108,35 @@ function w3_open() {
   document.getElementById("mySidebar").style.display = "block";
   document.getElementById("myOverlay").style.display = "block";
 }
- 
+
 function w3_close() {
   document.getElementById("mySidebar").style.display = "none";
   document.getElementById("myOverlay").style.display = "none";
 }
 </script>
 
+</body>
+</html>
+
+
+
+<html>
+<head>
+<style>
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+</style>
+</head>
+<body>
+<div class="container">
+  <a href="https://teacher.nwpu.edu.cn/kqwang"><font size="6">中文主页</font></a>
+  <br><br>
+  <a href="https://teacher.nwpu.edu.cn/en/kqwang"><font size="6">English Homepage</font></a>
+
+</div>
 </body>
 </html>
